@@ -1,6 +1,6 @@
-# Copyright 1999-2009 Gentoo Foundation
+# Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/capistrano-launcher/Attic/capistrano-launcher-1.ebuild,v 1.10 2009/06/13 09:20:17 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/capistrano-launcher/Attic/capistrano-launcher-1.ebuild,v 1.11 2010/07/30 15:25:01 darkside Exp $
 
 DESCRIPTION="Launcher script for capistrano"
 HOMEPAGE="http://capify.org/"
@@ -8,7 +8,7 @@ SRC_URI=""
 
 LICENSE="MIT"
 SLOT="0"
-KEYWORDS="amd64 ia64 ppc ppc64 x86"
+KEYWORDS="amd64 ia64 ppc ppc64 x86 ~amd64-linux ~x86-linux ~ppc-macos ~x64-solaris ~x86-solaris"
 IUSE=""
 
 # Block versions of capistrano that install /usr/bin/cap to avoid file-collision
